# faithproject-svn-to-git

trunk/: CMakeLists.txt  launch_server.sh
trunk/Auth/: AuthApplication.cpp  AuthApplication.hpp  CMakeLists.txt  Session.cpp  Session.hpp  User.hpp  faith.db  main.cpp
trunk/doc/dot/: db.dot  dotify.sh  edges.dot  header.dot  server.dot  tools.dot  webservice.dot
trunk/src/: Application.cpp  Application.hpp  Session.cpp  Session.hpp  main.cpp
trunk/src/db/: DbHandler.cpp  DbHandler.hpp  User.hpp
trunk/src/tools/: Singleton.hpp
